[project]
name = "capsul"
version = "3.0.0a1"
authors = [
    {name = "Popolse Team", email = "contact@brainvisa.info"},
]
description = "CAPSUL is a powerful tool to define and share processing pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "CeCILL-B"}
classifiers = [
    "License :: OSI Approved",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: SQL",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]

dependencies = [
    "soma-base ~=6.0.0a1",
    "graphviz",
    "PyQt5",
    "PyYAML",
    "nipype",
]

[project.optional-dependencies]
doc = [
    "sphinx >=1.0", "jupyter",
]

[project.urls]
homepage = "https://populse.github.io/soma-base/"
repository = "https://github.com/populse/soma-base"

[build-system]
requires = ["setuptools >= 61.0","setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.brainvisa-cmake]
test_commands = ["python -m capsul.test --verbose"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
capsul = { path = ".", editable = true, extras=["doc"] }
build = "*"

[tool.pixi.environments]
default = { solve-group = "default" }
doc = { features = ["doc"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python="*"
pip = "*"
pytest = "*"
twine = "*"
